[gd_scene load_steps=6 format=3 uid="uid://bspck25sipy5u"]

[ext_resource type="Script" path="res://cartas.gd" id="1_72ci0"]
[ext_resource type="Texture2D" uid="uid://b885fmhu2y5yg" path="res://assets/Carta-roguelixo.png" id="2_5sxqd"]
[ext_resource type="Texture2D" uid="uid://cq55r5jicda1h" path="res://assets/Vida.png" id="3_73ljy"]
[ext_resource type="Texture2D" uid="uid://ci025i63jak6w" path="res://assets/speed_card.png" id="4_jcea7"]
[ext_resource type="Texture2D" uid="uid://cv1c6y7wqm1y2" path="res://assets/Dist.png" id="5_kvmoc"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_72ci0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Vida" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 13.0
offset_top = -1.0
offset_right = 141.0
offset_bottom = 127.0
texture = ExtResource("2_5sxqd")

[node name="Vida" type="Sprite2D" parent="Control/Vida"]
position = Vector2(54, 42)
scale = Vector2(0.96875, 1)
texture = ExtResource("3_73ljy")

[node name="NomeV" type="Label" parent="Control/Vida"]
layout_mode = 0
offset_left = 29.0
offset_top = 13.0
offset_right = 69.0
offset_bottom = 36.0
scale = Vector2(0.639999, 0.639999)

[node name="DescricaoV" type="Label" parent="Control/Vida"]
layout_mode = 0
offset_left = 35.0
offset_top = 56.0
offset_right = 75.0
offset_bottom = 79.0

[node name="Vel" type="TextureRect" parent="Control"]
offset_left = 103.0
offset_top = -2.0
offset_right = 231.0
offset_bottom = 126.0
texture = ExtResource("2_5sxqd")

[node name="Vel" type="Sprite2D" parent="Control/Vel"]
position = Vector2(55, 41)
texture = ExtResource("4_jcea7")

[node name="NomeVel" type="Label" parent="Control/Vel"]
offset_left = 34.0
offset_top = 12.0
offset_right = 74.0
offset_bottom = 35.0

[node name="DescricaoVel" type="Label" parent="Control/Vel"]
offset_left = 35.0
offset_top = 57.0
offset_right = 75.0
offset_bottom = 80.0

[node name="Dist" type="TextureRect" parent="Control"]
offset_left = 206.0
offset_top = -4.0
offset_right = 334.0
offset_bottom = 124.0
texture = ExtResource("2_5sxqd")

[node name="Dist" type="Sprite2D" parent="Control/Dist"]
position = Vector2(54, 38)
texture = ExtResource("5_kvmoc")

[node name="NomeDist" type="Label" parent="Control/Dist"]
offset_left = 34.0
offset_top = 12.0
offset_right = 74.0
offset_bottom = 35.0

[node name="DescricaoDist" type="Label" parent="Control/Dist"]
offset_left = 34.0
offset_top = 60.0
offset_right = 74.0
offset_bottom = 83.0
